<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EFragment"
    android:orientation="vertical"
    android:paddingLeft="10dp">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/First"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_marginTop="45dp"

     />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:layout_marginTop="25dp"
       />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc1"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:layout_marginTop="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc3"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc4"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"/>

</LinearLayout>